[fix] Prevent horizontal scroll caused by main page carousel
*Add overflow: hidden to main page hero section

--- a/src/sass/pages/_main-page.scss
+++ b/src/sass/pages/_main-page.scss
@@ -1,4 +1,8 @@
 // HERO
+.hero {
+  overflow: hidden;
+}
+
 .main__page-title {
   width: 280px;
   margin-right: auto;
